--- a/paper/firstwords.tex
+++ b/paper/firstwords.tex
@@ -35,21 +35,21 @@ Language acquisition, word learning, cognitive development
 %%INTRODUCTION%%%%
 \section{Introduction}
 
-Over the course of their first years, children rapidly go from speechless infants to toddlers producing and learning language at an astounding rate \cite{fenson1994}. Marking the beginning of productive verbal language, a child's first word is an important and measurable insight into what a child is willing and able to talk about at that point in their development. Yet, in contrast to later behaviors, children's first words often emerge during intimate moments between children and caregivers that are difficult for external observers to record or measure. Here we leverage large-scale data from parental reports to ask what children's first words reveal about two key issues in early language learning: the time-course of the emergence of language, and the relation between conceptual and linguistic development. 
+Over the course of their first years, children rapidly go from speechless infants to toddlers producing and learning language at an astounding rate \cite{fenson1994}. Marking the beginning of productive verbal language, a child's first word is an important and measurable insight into what a child is willing and able to talk about at that point in their development. Yet, in contrast to later behaviors, children's first words often emerge during intimate moments between children and caregivers that are difficult for external observers to record or measure. Here we leverage large-scale data from parental reports to ask what children's first words reveal about two key issues in early language learning: the time-course of the emergence of language, and the relation between conceptual and linguistic development. In three sets of analyses, we explore when a first word is likely to emerge, as well as the distribution of conceptual categories of these first words in both early and later speakers. Finally, we turn to the factors that predict which words are more likely to be a child's first.
 
 Infants begin to show an aptitude for language from a very early point in development. For instance, 1-month-old infants already prefer to listen to child-directed speech over adult-directed speech \cite{cooper1990}. Over the course of the first year, infants are learning to recognize and segment the distinctive sounds and word forms of their native language \cite{kuhl2004,werker2005}. Additionally, by 6--9 months, many infants already show a tendency to look to named targets when they hear common nouns, suggesting early beginnings for form-meaning mapping as well \cite{tincoff2012,bergelson2012}. Infants' abilities to comprehend language thus appear to be reasonably well-developed prior to 12 months. Additionally, as early as 12 weeks, children also begin producing the sounds of their native language in babble, suggesting an early beginning to language production \cite{kuhl2004}. However, developmental norms suggest that the typical child will produce their first word at 12 months. Is this early lag between comprehension and production real, or only apparent?
 
 What is the relationship between children's linguistic and conceptual development? Typically-developing monolingual children show correlations between some cognitive achievements and their language production; for example, acquisition of words about disappearance is correlated with comprehension of object permanence \cite{gopnik1986}. But at a larger scale, conceptual development appears to play a more limited role: 2--5-year-old international adoptees learning English for the first time show the same gross patterns of development in vocabulary composition as monolingual infants. \cite{snedeker2007}. There are also striking convergences in early words across very different cultural contexts \cite{tardif2007}. Do patterns of first word productions---and their distribution across semantic categories---suggest any broader relationships between language acquisition and cognitive development? 
 
-Because very early language is difficult to observe in the lab, we leverage parent reports to learn about children's first words. A child's first word is highly memorable for parents, and many parents record this milestone in baby books. We define a true ``first word'' as the consistent use of a form to communicate a particular meaning, whether or not that form matches the adult target form. While recognizing that parents may not share this definition, intuitively, we believe this is what parents tend to think they are reporting when they report first words. 
+Because very early language is difficult to observe in the lab, in this study we leverage parent reports to learn about children's first words, and what they can reveal about the relationship between early conceptual and linguistic development. A child's first word is highly memorable for parents, and many parents record this milestone in baby books. We define a true ``first word'' as the consistent use of a form to communicate a particular meaning, whether or not that form matches the adult target form. While recognizing that parents may not share this definition, intuitively, we believe this is what parents tend to think they are reporting when they report first words, and found support for this across our datasets in parents reporting a first word as a phonological approximation of a more complex adult target.
 
-Parent report has both substantial disadvantages and real advantages as a scientific measurement. One issue with any self-report measure is that there is no way to validate participants' responses. Another complication is that parents may be biased observers, and interpret word-like babble as productive communication. Nevertheless, parent report is widely used as a measure of early child language, e.g. in the MacArthur-Bates Communicative Development Inventory (CDI), a vocabulary checklist that is both a reliable and valid measure of early vocabulary (\citeNP{fenson1994,fenson2007}, although the reliability of the earliest ages of the CDI has been questioned; \citeNP{feldman2000}). And in addition, self-reports are very easy to collect, making them ideal for large-scale investigations like the present study. 
+Parent report has both substantial disadvantages and real advantages as a scientific measurement. One issue with any self-report measure is that there is no way to validate participants' responses. Another complication is that parents may be biased observers, and interpret word-like babble as productive communication. Additionally, the recollection of a first word may be subject to errors in memory recall, or other retrospective biases. Nevertheless, parent report is widely used as a measure of early child language, e.g. in the MacArthur-Bates Communicative Development Inventory (CDI), a vocabulary checklist that is both a reliable and valid measure of early vocabulary (\citeNP{fenson1994,fenson2007}, although the reliability of the earliest ages of the CDI has been questioned; \citeNP{feldman2000}). And in addition, self-reports are very easy to collect, making them ideal for large-scale investigations like the present study. 
 
-To address issues of bias in self-report, we gathered data from four sources. The first dataset was a survey filled out by parents who were members of a local children's museum. These parents were an ethnically diverse population with a higher education level than the general population and a demonstrated interest in their child's development, likely leading to a high level of engagement in their children's early language. Our second dataset was the Amazon Mechanical Turk parent population; this community is more diverse in terms of age, gender, education level, and socio-economic status (SES). Our third dataset came from parents in the psycholinguistic research community. We selected this population for its familiarity with the subject and because this community was most likely to have written records about first words. The data we received from all three of these surveys was generally very consistent, both within and across datasets, leading us to believe at the very least that any bias in one was likely in operation across all three. 
+To address some of the issues of bias in self-report, we gathered data from four sources. The first dataset was a survey filled out by parents who were members of a local children's museum. These parents were an ethnically diverse population with a higher education level than the general population and a demonstrated interest in their child's development, likely leading to a high level of engagement in their children's early language. Our second dataset was the Amazon Mechanical Turk parent population; this community is more diverse in terms of age, gender, education level, and socio-economic status (SES). Our third dataset came from parents in the psycholinguistic research community. We selected this population for its familiarity with the subject and because this community was most likely to have written records about first words. The data we received from all three of these surveys was generally very consistent, both within and across datasets, leading us to believe at the very least that any bias in one was likely in operation across all three. 
 
 Our final dataset was drawn from \href{http://wordbank.stanford.edu}{Wordbank}, a large, open repository of CDI form data that aggregates across several samples including the updated CDI norming sample \cite{fenson2007}. This dataset was chosen because the CDI form asks a parent to report their child's  current productive vocabulary, and thus is free from any retrospective reporting biases that may skew our other surveys. Because the CDI contains a fixed set of words, it constrains the space of possible first words but also facilitates comparative analyses by reducing the space to a small, representative set.
 
-Drawing on these datsets, we investigate the time-course of the emergence of productive language and potential factors that might lead to individual differences in linguistic development. First, we analyzed variability in the age of first word onset, finding that 75\% of children were reported as producing a word prior to 12 months. Second, we asked whether the range of of first words varies with children's chronological age, allowing us to ask about the relationship between linguistic and conceptual development. This analysis yielded no measurable differences, indicating that linguistic factors---rather than conceptual ones---likely constrain the set of first words. Finally, we show that two specific linguistic factors, input frequency and phonetic complexity, both predict the words that children are likely to say first.
+Drawing on these datsets, we investigate the time-course of the emergence of productive language and potential factors that might lead to individual differences in linguistic development. First, we analyze variability in the age of first word onset, finding that 75\% of children are reported as producing a word prior to 12 months. Second, we ask whether the range of of first words varies with children's chronological age, allowing us to ask about the relationship between linguistic and conceptual development. This analysis yields no measurable differences, indicating that linguistic factors---rather than conceptual ones---likely constrain the set of first words. Finally, we show that two specific linguistic factors, input frequency and phonetic complexity, both predict the words that children are likely to say first.
 
 %%GENERAL DATA METHODS%%
 \section{General Methods}
@@ -69,14 +69,14 @@ Parents completed a web-based survey. The survey asked parents to report their c
 
 \subsubsection{Exclusion of ``mama'' and ``dada''}
 
-While many parents reported that their child's first word was ``mama'' or ``dada'' (or some equivalent or variant), we excluded these children from our analyses. First, parents may be motivated to hear these words very early in babble, even when the word is not being used in a meaningful or consistent way. Second, we were interested in the range of concepts represented in the words we analyzed. Therefore, we stressed in our surveys that parents were to report their children's first word \emph{other} than ``mama'' or ``dada'' to avoid this possibility and to detect a larger range of conceptual types. Additionaly in the MTurk dataset, we included a question asking whether the child's first word was ``mama'', ``dada,'' or another first word. In total, 1112/1650 (67\%) of children were reported to produce ``mama'' (N = 618) or ``dada'' (N = 489) first rather than another word (N = 543).
+While many parents reported that their child's first word was ``mama'' or ``dada'' (or some equivalent or variant), we excluded these children from our analyses. First, parents may be motivated to hear these words very early in babble, even when the word is not being used in a meaningful or consistent way. Second, we were interested in the range of concepts represented in the words we analyzed. Therefore, we stressed in our surveys that parents were to report their children's first word \emph{other} than ``mama'' or ``dada'' to avoid this possibility and to detect a larger range of conceptual types. Additionaly in the MTurk dataset, we included a question asking whether the child's first word was ``mama'', ``dada,'' or another first word. In total, 1107/1650 (67\%) of children were reported to produce ``mama'' (N = 618) or ``dada'' (N = 489) first rather than another word (N = 543).
 
 %SURVEY2
 \subsection{Dataset 2: Amazon Mechanical Turk}
 
 \subsubsection{Participants}
 
-We recruited 1000 parents from Amazon Mechanical Turk (Mturk) to complete an in-depth survey on their children's first words. We restricted the survey to parents in the United States. This survey allowed parents to answer for multiple children. We received responses for 1671 children (813 female, 858 male; M age = 10 mo., median = 10 mo.). Responses from 21 children were excluded from subsequent analyses because they had not yet spoken (M age = 2.7 mo., median = 2 mo.). Responses in other languages were translated into English where possible; one response was excluded. Caregiver education levels were highly diverse (Elementary = 3; Some high school = 15; High school = 166; Some college = 309; College = 346; Some graduate school = 26; Graduate school = 131; N = 996).
+We recruited 1000 parents from Amazon Mechanical Turk (Mturk) to complete an in-depth survey on their children's first words. We restricted the survey to parents in the United States. This survey allowed parents to answer for multiple children. We received responses for 1671 children (813 female, 858 male; M age = 10 mo., median = 10 mo.). Responses from 21 children were excluded from subsequent analyses because they had not yet spoken (M age = 2.7 mo., median = 2 mo.). Responses in other languages were translated into English where possible; one response was excluded. After exclusions, this dataset contained responses from 996 parents and 1650 children's first words. Caregiver education levels were highly diverse (Elementary = 3; Some high school = 15; High school = 166; Some college = 309; College = 346; Some graduate school = 26; Graduate school = 131; N = 996).
 
 \subsubsection{Method}
 
@@ -112,7 +112,7 @@ As responses were taken directly from the CDI, no data preparation was necessary
 \centering
 \begin{tabular}{cccc}
 \hline
-{\bf CDM} & {\bf MTurk} & {\bf Psycholinguists} & {\bf Wordbank} \\ 
+{\bf Museum} & {\bf MTurk} & {\bf Psycholinguists} & {\bf Wordbank} \\ 
 \hline
 \textbf{Ball} & \textbf{Dog} & Up & Baa Baa \\ 
 \textbf{Hi} & No & More & Uh--Oh \\
@@ -232,7 +232,7 @@ Across datasets, input frequency and phonetic complexity consistently predicted 
 
 What can children's first words reveal about their conceptual and linguistic development? Using parent report data, we presented three analyses, touching on the timing of productive language emergence, the distribution of conceptual categories across developmentally early and late first words, and factors that play a role in predicting which words are produced first. More than three quarters of children produced a first word prior to their first birthday, but the particular concepts these words named did not vary across age. Instead, two non-conceptual factors---input frequency and phonetic complexity---predicted the number of children who produced a particular word first.
 
-A child's first word is a highly salient moment whose memorability to caregivers also makes it ideally suited for use in parent-report measures. Nonetheless, even when analyzed at this scale, parent report is limited by observer bias. We dealt with this issue in several ways, including by seeking converging evidence across multiple, distinct datasets and by testing explicitly for retrospective biases (which we did not find). Nevertheless, the possibility of bias is present, and future studies should consider the possibility of prospective report or dense recording techniques to extend and validate our findings. 
+A child's first word is a highly salient moment whose memorability to caregivers also makes it ideally suited for use in parent-report measures. Nonetheless, even when analyzed at this scale, parent report is limited by observer bias. Although we found no evidence of retrospective biases in parents of older children over-reporting early first words, we must remain aware that there are potential issues with memory recall or other parental biases, as in any self-report measure. We dealt with these issues in several ways, including by seeking converging evidence across multiple, distinct datasets and by testing explicitly for retrospective biases. Nevertheless, the possibility of bias is present, and future studies should consider the possibility of prospective report or dense recording techniques to extend and validate our findings. 
 
 We began by asking about the lag between comprehension and production in early language. One possible explanation for this lag is that there is a period during early infancy in which word knowledge consists of associations between auditory and visual stimuli and so there is no drive to communicate through production. In contrast to this hypothesis, our data suggest that many children are striving to communicate even quite early on. Consistent with other studies of early vocabulary \cite{tardif2007}, the productions that parents reported also included functional and communicative items---``hi,'' ``more,'' and ``no''---as well as common nouns. In sum, our work suggests that studying the very first emergence of productive speech is a rich method for adding to our understanding of language development.
 
